Rename SelfSigned means to EmployeeID (#395)
